@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.program.deluge"
        name="Deluge"
-       version="0.4.1"
+       version="0.4.7"
        provider-name="Iulian Postaru">
     <requires>
         <import addon="xbmc.python" version="2.0"/>
